--- a/chaiaurcodetwofullstack/mystrymessage/package.json
+++ b/chaiaurcodetwofullstack/mystrymessage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chaiaurcodeone",
+  "name": "mystrymessage",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
-    "next": "14.2.3",
+    "mongoose": "^8.4.4",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
